--- a/src/BookingList/BookingList.module.css
+++ b/src/BookingList/BookingList.module.css
@@ -1,15 +1,15 @@
 @media screen and (min-width: 800px) {
-    .group {
-        width: 800px;
-        margin: 0 auto;
-    }
+  .group {
+    width: 800px;
+    margin: 0 auto;
+  }
 }
 
 .hint {
-    color: black
+  color: black;
 }
 
 .accent {
-    color: #2688eb;
-    font-weight: 500;
+  color: #2688eb;
+  font-weight: 500;
 }
